ts: test specific vars/cmds hooks in 50/560

--- a/testsuite/modulefiles.3/.modulerc
+++ b/testsuite/modulefiles.3/.modulerc
@@ -55,3 +55,13 @@ if {[info exists env(TESTSUITE_VARIANT)]} {
         }
     }
 }
+if {[info exists env(TESTSUITE_ENABLE_SITECONFIG_EXTRA_REGULAR)]} {
+    switch -- $env(TESTSUITE_ENABLE_SITECONFIG_EXTRA_REGULAR) {
+        override {
+            proc myproc1 {} {
+                return override
+            }
+            set myvar override
+        }
+    }
+}
