Track loaded modules qualified for refresh eval
Track loaded modules that are qualified for a refresh evaluation.
Refresh evaluation is only useful if module defines volatile environment
changes: shell completion, alias or function.

An internal state, named refresh_qualified, marks loading modules
defining such volatile environment changes. Such modules are then added
to the __MODULES_LMREFRESH environment variable to track this property
once module is loaded.

Code is also added to remove module from __MODULES_LMREFRESH when it is
unloaded.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -1612,6 +1612,9 @@ proc set-alias {alias what} {
    set ::g_Aliases($alias) $what
    set ::g_stateAliases($alias) new
 
+   # current module is qualified for refresh evaluation
+   lappendState -nodup refresh_qualified [currentState modulename]
+
    return {}
 }
 
@@ -1630,6 +1633,9 @@ proc unset-alias {alias} {
 proc set-function {function what} {
    set ::g_Functions($function) $what
    set ::g_stateFunctions($function) new
+
+   # current module is qualified for refresh evaluation
+   lappendState -nodup refresh_qualified [currentState modulename]
 
    return {}
 }
@@ -2677,6 +2683,9 @@ proc complete {shell name body} {
    # also some shells may set multiple definitions for a single name
    lappend ::g_Completes($name) $shell $body
    set ::g_stateCompletes($name) new
+
+   # current module is qualified for refresh evaluation
+   lappendState -nodup refresh_qualified [currentState modulename]
 }
 
 # undo complete in unload mode
