Only refresh loaded modules requiring it
Use the qualified refresh property to only evaluate in refresh mode the
loaded modules marked with this property.

Fixes #477

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2466,7 +2466,7 @@ proc cmdModuleRefresh {} {
    # load variants from loaded modules
    cacheCurrentModules
 
-   foreach lm [getLoadedModulePropertyList name] {
+   foreach lm [getLoadedModulePropertyList refresh] {
       # prepare info to execute modulefile
       set vrlist [getVariantList $lm 1]
       if {[llength $vrlist] > 0} {
