Remove modvr default value on setLoadedModule proc

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1145,7 +1145,7 @@ proc isModuleRefreshQualified {mod} {
    return $::g_loadedModulesRefresh($mod)
 }
 
-proc setLoadedModule {mod modfile uasked {modvr {}} refresh} {
+proc setLoadedModule {mod modfile uasked modvr refresh} {
    set ::g_loadedModules($mod) $modfile
    # a loaded modfile may correspond to multiple loaded virtual modules
    lappend ::g_loadedModuleFiles($modfile) $mod
