--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -2,7 +2,7 @@
 %global vimdatadir %{_datadir}/vim/vimfiles
 
 Name:           environment-modules
-Version:        5.1.1
+Version:        5.2.0
 Release:        @MODULES_RPM_RELEASE@%{?dist}
 Summary:        Provides dynamic modification of a user's environment
 
@@ -227,6 +227,11 @@ fi
 
 
 %changelog
+* Tue Nov 08 2022 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.2.0-1
+- Update to 5.2.0
+- Recommends Nagelfar Tcl syntax linter
+- Add Nagelfar linter addons
+
 * Tue May 31 2022 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.1.1-1
 - Update to 5.1.1
 - Move libtclenvmodules in an environment-modules directory under libdir
