Add 'cachebuild' sub-command
Introduce cachebuild sub-command to create cache file under modulepaths.

This sub-command cannot be called from a modulefile evaluation context.

Add sub-command empty skeleton: cmdModuleCachebuild.

Sub-command accepts no option. It may take optional arguments: list of
modulepath directory where to build cache. When no argument is
specified, cache is built for all enabled modulepaths.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -108,7 +108,7 @@ proc parseModuleCommandName {command defaultcmd} {
       initlist initclear autoinit clear config help test prepend-path\
       append-path remove-path is-loaded is-saved is-used is-avail info-loaded\
       sh-to-mod edit try-load refresh state load-any lint mod-to-sh reset\
-      stash stashpop stashrm stashshow stashclear stashlist]}]
+      stash stashpop stashrm stashshow stashclear stashlist cachebuild]}]
 
    reportDebug "(command=$command, cmdvalid=$cmdvalid, cmdempty=$cmdempty)"
    return [list $command $cmdvalid $cmdempty]
@@ -375,7 +375,7 @@ proc module {command args} {
          remove-path - is-loaded - is-saved - is-used - is-avail -\
          info-loaded - clear - sh-to-mod - edit - refresh - source - state -\
          lint - mod-to-sh - reset - stash - stashpop - stashrm - stashshow -\
-         stashclear - stashlist {
+         stashclear - stashlist - cachebuild {
             knerror "${msgprefix}Command '$command' not supported$tryhelpmsg"
          }
       }
@@ -739,6 +739,9 @@ proc module {command args} {
       }
       stashlist {
          cmdModuleStashlist $show_oneperline $show_mtime
+      }
+      cachebuild {
+         cmdModuleCachebuild {*}$args
       }
       help {
          cmdModuleHelp {*}$args
