--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1772,7 +1772,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #106 Too long line
+   ##nagelfar ignore #107 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1818,6 +1818,9 @@ Environment direct handling commands:
   prepend-path [-d c] var val [...] Prepend value to environment variable
   append-path [-d c] var val [...]  Append value to environment variable
   remove-path [-d c] var val [...]  Remove value from environment variable
+
+Module cache handling commands:
+  cachebuild      [modulepath ...]  Create cache file for modulepath(s)
 
 Other commands:
   help            [modulefile ...]  Print this or modulefile(s) help info
