--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2870,6 +2870,9 @@ proc cmdModuleStashlist {show_oneperline show_mtime} {
    cmdModuleSavelist $show_oneperline $show_mtime {} stash-*
 }
 
+proc cmdModuleCachebuild {args} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
