init: add cachebuild subcmd to completion scripts

--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -84,7 +84,7 @@ _module() {
                     COMPREPLY=( $(compgen -W "@comp_unload_opts@ ${LOADEDMODULES//:/ }" -- "$cur") );;
     switch|swap)    COMPREPLY=( $(compgen -W "@comp_load_opts@ ${LOADEDMODULES//:/ }" -- "$cur") );;
     unuse|is-used)  COMPREPLY=( $(IFS=: compgen -W "${MODULEPATH}" -- "$cur") );;
-    use|-a|--append)   ;;               # let readline handle the completion
+    use|-a|--append|cachebuild)   ;;               # let readline handle the completion
     display|help|show|test|path|paths|is-loaded|info-loaded)
                     _module_comgen_words_and_files "@comp_mfile_opts@ $(_module_avail "$cur")" "$cur";;
     is-avail)
@@ -146,7 +146,7 @@ if $(type -t ml >/dev/null); then
                         COMPREPLY=( $(compgen -W "@comp_unload_opts@ ${LOADEDMODULES//:/ }" -- "$cur") );;
         switch|swap)    COMPREPLY=( $(compgen -W "@comp_load_opts@ ${LOADEDMODULES//:/ }" -- "$cur") );;
         unuse|is-used)  COMPREPLY=( $(IFS=: compgen -W "${MODULEPATH}" -- "$cur") );;
-        use|-a|--append)   ;;               # let readline handle the completion
+        use|-a|--append|cachebuild)   ;;               # let readline handle the completion
         display|help|show|test|path|paths|is-loaded|info-loaded)
                         _module_comgen_words_and_files "@comp_mfile_opts@ $(_module_avail "$cur")" "$cur";;
         is-avail)
