--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -95,6 +95,8 @@ complete module 'n/help/`_module_avail`/' \
         'n/stashpop/`_module_stashlist`/' \
         'n/stashrm/`_module_stashlist`/' \
         'n/stashshow/`_module_stashlist`/' \
+        'n/cachebuild/d/' \
+        'N/cachebuild/d/' \
         "n/--reset/(@comp_config_opts@)/" \
         'n/-h/n/' \
         'n/--help/n/' \
