--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -177,6 +177,7 @@ _module() {
             'stashpop:Restore then remove stash collection'
             'stashrm:Remove stash collection'
             'stashshow:Display information about stash collection'
+            'cachebuild:Create cache file for modulepath(s)'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
@@ -282,6 +283,10 @@ _module() {
                _arguments \
                   '(-a --append)'{-a,--append}'[Append directory to MODULEPATH]' \
                   '(-p --prepend)'{-p,--prepend}'[Prepend directory to MODULEPATH]' \
+                  '*:modulepath:_files -/' && ret=0
+               ;;
+            (cachebuild)
+               _arguments \
                   '*:modulepath:_files -/' && ret=0
                ;;
             (display|help|show|test|path|paths|is-loaded|info-loaded)
