--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1772,7 +1772,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #107 Too long line
+   ##nagelfar ignore #108 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1821,6 +1821,7 @@ Environment direct handling commands:
 
 Module cache handling commands:
   cachebuild      [modulepath ...]  Create cache file for modulepath(s)
+  cacheclear                        Delete cache file in enabled modulepath(s)
 
 Other commands:
   help            [modulefile ...]  Print this or modulefile(s) help info
