--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2873,6 +2873,9 @@ proc cmdModuleStashlist {show_oneperline show_mtime} {
 proc cmdModuleCachebuild {args} {
 }
 
+proc cmdModuleCacheclear {} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
