init: add cacheclear subcmd to completion scripts

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -97,6 +97,7 @@ complete module 'n/help/`_module_avail`/' \
         'n/stashshow/`_module_stashlist`/' \
         'n/cachebuild/d/' \
         'N/cachebuild/d/' \
+        "n/cacheclear/n/" \
         "n/--reset/(@comp_config_opts@)/" \
         'n/-h/n/' \
         'n/--help/n/' \
