--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -178,6 +178,7 @@ _module() {
             'stashrm:Remove stash collection'
             'stashshow:Display information about stash collection'
             'cachebuild:Create cache file for modulepath(s)'
+            'cacheclear:Delete cache file in enabled modulepath(s)'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
