Core code for cmdModuleCacheclear
Implement cacheclear sub-command. For each modulepath enabled, check
module cache file exists. If yes and if modulepath is writable for user,
try to delete the cache file.

Report message block is used to report file deletion. Reports are output
in normal verbosity level or higher. A warning message is emitted if
modulepath is not writable for user.

Add tcl/cache.tcl source file to store procedure related to cache
mechanism. Update Makefile to properly generate modulecmd.tcl with this
new tcl file.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -260,8 +260,9 @@ proc reportMsgRecord {header {hidden 0}} {
    } elseif {(!$hidden && ([isVerbosityLevel verbose] || ([isVerbosityLevel\
       normal] && ([ongoingCommandName restore] || [ongoingCommandName source]\
       || [ongoingCommandName reset] || [ongoingCommandName stash] ||\
-      [ongoingCommandName stashpop]) && $recid eq [topState msgrecordid])))\
-      || ($hidden && [isVerbosityLevel verbose2])} {
+      [ongoingCommandName stashpop] || [ongoingCommandName cacheclear]) &&\
+      $recid eq [topState msgrecordid]))) || ($hidden && [isVerbosityLevel\
+      verbose2])} {
       report $header
    }
 }
